# Lightning-Profiler

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/lightning_profiler/: __init__.py  device_bottleneck.py  pipeline_breakdown.py
tests/: __init__.py  conftest.py  test_device_bottleneck.py  test_pipeline_breakdown.py
